# cczu-client-api

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test.yml
src/: client.rs  common.rs  cookies_copy.rs  cookies_io.rs  creq.rs  fields.rs  lib.rs  main.rs  recursion.rs  sso.rs  test.rs  types.rs  universal.rs  webvpn.rs
src/app/: app.rs  base.rs  jwcas.rs  jwcas_calendar.rs  jwcas_calendar_type.rs  jwcas_type.rs  mod.rs  ywtb.rs
src/base/: app.rs  client.rs  mod.rs
src/courses/: asp_session.rs  mod.rs
src/courses/app/: evaluation.rs
src/internal/: mod.rs  recursion.rs
src/internals/: cookies_io.rs  fields.rs  macros.rs  mod.rs  recursion.rs
src/misc/: wifi.rs
src/sso/: common.rs  mod.rs  session.rs  simple.rs  types.rs  universal.rs  webvpn.rs
src/sso/app/: jwcas.rs  jwcas_calendar.rs  mod.rs
src/wechat/: mod.rs
src/wechat/app/: jwcas.rs  jwqywx.rs  jwqywx_type.rs  mod.rs
