[package]
name = "cczu-client-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
reqwest = { version = "0.12", features = [
    "cookies",
    "multipart",
    "native-tls-vendored",
] }
reqwest_cookie_store = "0.7"

once_cell = "*"
scraper = "*"
base64 = "*"
tokio = { version = "*", features = ["full"] }
aes = "*"
cbc = "*"
urlencoding = "*"
rand = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
cookie = "*"
async-recursion = "*"
