[package]
name = "cczu-client-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
reqwest = { version = "0.12", features = [
    "cookies",
    "multipart",
    "native-tls-vendored",
] }
reqwest_cookie_store = "0.7"
once_cell = "*"
scraper = "*"
base64 = "*"
tokio = { version = "*", features = ["full"] }
aes = "*"
cbc = "*"
urlencoding = "*"
rand = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
cookie = "*"
async-recursion = "*"

# calendar
regex = { version = "*", optional = true }
uuid = { version = "1.7.0", features = ["v4", "v3"], optional = true }
chrono = { version = "0.4.37", optional = true }
icalendar = { version = "0.16.0", optional = true }

[features]
calendar = ["uuid", "regex", "chrono", "icalendar"]
default = ["calendar"]
